--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,20 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-<header>
-  <h1>JSON Data Search</h1>
-</header>
+<body class="container">
+<% if notice.present? %>
+    <aside class="alert alert-info">
+      <%= notice %>
+    </aside>
+<% end %>
+<% if alert.present? %>
+    <aside class="alert alert-danger">
+      <%= alert %>
+    </aside>
+<% end %>
+
 <%= yield %>
 
 </body>
+
 </html>
